[tool.poetry]
name = "pycurl"
version = "0.1.0"
description = ""
authors = ["Alex Foley <afoley@getsporttrade.com>"]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
requests = "^2.28.1"
schema = "^0.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
